<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="my.wargames.skimcepatkaya.downlinerecruiter.AddDownline">

    <EditText
        android:id="@+id/editName"
        android:layout_width="320dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:background="?attr/colorAccent"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingBottom="3px"
        android:paddingLeft="15px"
        android:paddingTop="3px"
        android:textColor="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="280dp"
        android:layout_height="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:background="?attr/colorAccent"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:paddingBottom="3px"
        android:paddingLeft="15px"
        android:paddingTop="3px"
        android:textColor="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <EditText
        android:id="@+id/editAddress"
        android:layout_width="313dp"
        android:layout_height="153dp"
        android:layout_marginTop="12dp"
        android:background="?attr/colorAccent"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textMultiLine"
        android:paddingBottom="3px"
        android:paddingLeft="15px"
        android:paddingTop="3px"
        android:textColor="@color/light_gray"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPhone" />

    <Button
        android:id="@+id/buttonAddDownline"
        android:layout_width="270dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:onClick="checkCreds"
        android:text="@string/addDownline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/processResponse" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="2017 © Pesan kat downline, nak kaya kena usaha."
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddDownline"
        app:layout_constraintVertical_bias="0.87" />

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="275dp"
        android:layout_height="36dp"
        android:layout_marginTop="12dp"
        android:background="?attr/colorAccent"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingBottom="3px"
        android:paddingLeft="15px"
        android:paddingTop="3px"
        android:textColor="@color/light_gray"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAddress" />

    <TextView
        android:id="@+id/processResponse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmail" />

</android.support.constraint.ConstraintLayout>
